# galactic-bridge-sol

./: .gitignore  Anchor.toml  README.md  package.json
programs/solana-treasury/: Cargo.toml
programs/solana-treasury/src/: ddsds.rs  deposit.rs  lib.rs  storage.rs  utils.rs  withdraw.rs
programs/solana-treasury/src/instructions/: mod.rs  withdraw.rs  withdraw_owner.rs
programs/solana-treasury/src/state/: storage.rs
programs/solana-treasury/src/utils/: utils.rs  verify.rs
tests/: call-deposit.ts  call-withdraw-owner.ts  get-address.ts  main.ts  solana-treasury.ts
tests/tests/: deposit.ts  withdraw-fails.ts  withdraw-owner.ts  withdraw-success.ts
tests/utils/calls/: deposit.ts  withdraw-owner.ts  withdraw.ts
